# aiosu

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  SECURITY.rst  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: mypy.yml  publish.yml  pytest.yml
aiosu/: __init__.py  events.py  exceptions.py  helpers.py  utils.py
aiosu/classes/: __init__.py  backgrounds.py  beatmap.py  changelog.py  common.py  events.py  exceptions.py  gamemode.py  models.py  mods.py  performance.py  scopes.py  score.py  session.py  token.py  user.py
aiosu/classes/legacy/: __init__.py  match.py  replay.py
aiosu/models/: __init__.py  artist.py  backgrounds.py  base.py  beatmap.py  changelog.py  chat.py  comment.py  common.py  event.py  forum.py  gamemode.py  kudosu.py  lazer.py  mods.py  multiplayer.py  news.py  oauthtoken.py  performance.py  rankings.py  replay.py  scopes.py  score.py  search.py  spotlight.py  token.py  user.py  wiki.py
aiosu/models/files/: __init__.py  replay.py
aiosu/models/legacy/: __init__.py  match.py  replay.py
aiosu/utils/: __init__.py  accuracy.py  auth.py  binary.py  performance.py  replay.py
aiosu/utils/ordr/: __init__.py  client.py
aiosu/utils/ordr/models/: __init__.py  render.py  renderserver.py  skin.py
aiosu/v1/: __init__.py  client.py
aiosu/v2/: __init__.py  client.py  clientrepository.py  clientstorage.py
aiosu/v2/repositories/: __init__.py  oauthtoken.py  token.py
aiosu/v2/repository/: __init__.py  oauthtoken.py
docs/: Makefile  conf.py  make.bat
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/classes/: index.rst
docs/source/clients/v1/: index.rst
docs/source/clients/v2/: index.rst
docs/source/models/: index.rst
docs/source/utils/: index.rst  ordr.rst
examples/: models.py  ordr.py  utils.py
examples/v1/: client.py
examples/v2/: client.py  clientstorage.py  cursor.py  custom_repository.py  events.py
tests/: __init__.py  get_me.py  get_user.py  serialization.py
tests/classes/: __init__.py  mock.py
tests/data/: beatmap.osu  replay_fruits.osr  replay_lazer.osr  replay_mania.osr  replay_taiko.osr
tests/data/v1/: get_beatmap_200.json  get_beatmap_osu_200.osu  get_beatmap_scores_200.json  get_match_200.json  get_replay_200.json  get_replay_404.json  get_user_200.json  get_user_bests_200.json  get_user_recents_200.json  multiple_beatmap_fruits.json  multiple_beatmap_mania.json  multiple_beatmap_osu.json  multiple_beatmap_taiko.json  multiple_score_fruits_beatmap.json  multiple_score_fruits_bests.json  multiple_score_fruits_recents.json  multiple_score_mania_beatmap.json  multiple_score_mania_bests.json  multiple_score_mania_recents.json  multiple_score_osu_beatmap.json  multiple_score_osu_bests.json  multiple_score_osu_recents.json  multiple_score_taiko_beatmap.json  multiple_score_taiko_bests.json  multiple_score_taiko_recents.json  replay.json  single_user_fruits.json  single_user_mania.json  single_user_osu.json  single_user_taiko.json
tests/data/v2/: changelog_listing.json  comment_bundle.json  create_chat_channel_200.json  create_forum_topic_200.json  difficulty_attributes_fruits.json  difficulty_attributes_mania.json  difficulty_attributes_osu.json  difficulty_attributes_taiko.json  edit_forum_post_200.json  edit_forum_topic_title_200.json  get_beatmap_200.json  get_beatmap_attributes_200.json  get_beatmap_pack_200.json  get_beatmap_pack_404.json  get_beatmap_packs_200.json  get_beatmap_scores_200.json  get_beatmaps_200.json  get_beatmapset_200.json  get_beatmapset_404.json  get_beatmapset_discussion_posts_200.json  get_beatmapset_discussion_votes_200.json  get_beatmapset_discussions_200.json  get_beatmapset_events_200.json  get_changelog_build_200.json  get_changelog_listing_200.json  get_channel_200.json  get_channel_messages_404.json  get_channels_200.json  get_chat_ack_200.json  get_comment_200.json  get_comment_404.json  get_comments_200.json  get_events_200.json  get_featured_artists_200.json  get_featured_tracks_200.json  get_forum_topic_200.json  get_forum_topic_404.json  get_matches_200.json  get_me_200.json  get_multiplayer_leaderboard_200.json  (+122 more)
tests/generate/: .env.example  main.py
tests/test_misc/: test_models.py  test_token.py
tests/test_utils/: test_accuracy.py  test_pp.py  test_replay.py
tests/test_v1/: test_client.py
tests/test_v2/: __init__.py  test_client.py  test_clientstorage.py  test_events.py
