[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "./"
files = ["aiosu"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "aiosu"
version = "2.4.1"
description = "Simple and fast osu! API v1 and v2 library"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Nice Aesthetics", email = "nice@aesth.dev" }]
license = "GPL-3.0-or-later"
readme = "README.rst"
keywords = ["osu!", "osu", "api"]
dependencies = [
    "aiohttp>=3.8.3",
    "aiolimiter>=1.0.0",
    "emojiflags>=0.1.1",
    "orjson>=3.8.3",
    "pydantic>=2.0.3",
    "pyjwt>=2.6.0",
]

[project.urls]
repository = "https://github.com/NiceAesth/aiosu"
documentation = "https://aiosu.readthedocs.io/"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "tomli; python_version < '3.11'",
]
docs = ["Sphinx", "furo", "tomli; python_version < '3.11'"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.10.0"
mypy = "^2.0.0"
tomli = { version = "^2.0.1", python = "<3.11" }
sphinx = "^8.0.0"
furo = "^2025.0.0"
pytest-cov = "^7.0.0"
black = { version = "^26.0.0", allow-prereleases = true }
pre-commit = "^4.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
